<!--
  ~ Copyright (C) 2017 Vincent Peter
  ~ Licensed under the Apache License, Version 2.0 Smart Bet Tips
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">SmartBet</string>
    <string name="prediction">Prediction</string>
    <string name="team_b">Team B</string>
    <string name="team_a">Team A</string>
    <string name="time">time</string>
    <string name="league">league</string>
    <string name="ad_unit_one">ca-app-pub-3021111099724641/6671630819</string>
    <string name="ad_unit_two">ca-app-pub-3021111099724641/8148364015</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3021111099724641/2241431218</string>
    <string name="credits">Credits</string>
    <string name="eula">Eula</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="_0">0</string>
    <string name="betin">Betin</string>
    <string name="elite_bet">Elite bet</string>
    <string name="sportpesa">SportPesa</string>
    <string name="logo">Smatbet Logo</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="splashtag">Bet Like A Legend</string>
</resources>
