<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Vincent Peter
  ~ Licensed under the Apache License, Version 2.0 Smart Bet Tips
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_eula"
        android:title="@string/eula"
        app:showAsAction="never" />
    <item android:id="@+id/action_credits"
        android:title="@string/credits"
        app:showAsAction="never"/>
    <item android:id="@+id/action_exit"
        android:title="@string/exit"
        app:showAsAction="never"/>
</menu>
